--- a/build64/Makefile
+++ b/build64/Makefile
@@ -174,7 +174,8 @@ memtest.bin: memtest_shared.bin boot/bootsect.o boot/setup.o ldscripts/memtest_b
 
 memtest.efi: memtest_shared.bin boot/header.o boot/setup.o ldscripts/memtest_efi.lds
 	$(eval SIZES=$(shell size -B -d memtest_shared | grep memtest_shared))
-	$(LD) --defsym=_bss_size=$(word 3,$(SIZES)) -T ldscripts/memtest_efi.lds boot/header.o boot/setup.o -b binary memtest_shared.bin -o memtest.efi
+	objcopy -j .text -j .sdata -j .data -j .reloc --target efi-app-x86_64 --subsystem=10 memtest_shared memtest.pre.efi
+	$(LD) --defsym=_bss_size=$(word 3,$(SIZES)) -T ldscripts/memtest_efi.lds boot/header.o boot/setup.o -b pei-x86-64 memtest.pre.efi -o memtest.efi
 
 memtest.mbr: memtest_shared.bin boot/mbr.o ldscripts/memtest_mbr.lds
 	$(LD) -T ldscripts/memtest_mbr.lds boot/mbr.o -b binary memtest_shared.bin -o memtest.mbr
